--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -3,15 +3,7 @@
         Deposit Amount
     </button>
 </div>
-<div class="mb-3">
-    <label for="teamSelect" class="form-label ">Select Team</label>
-    <select id="teamSelect" class="form-select">
-      <option value=""> Select packages</option>
-      <option value="left">Sliver</option>
-      <option value="right">Gold</option>
-      <option value="tree">Diamond</option>
-    </select>
-  </div>
+
     <h2 class="fw-bold">Deposit Funds</h2>
     <table>
         <thead>
@@ -51,9 +43,8 @@
                 <select class="form-select" id="coinSelect" aria-label="Select Coin"
                   style="border-radius: 16px; font-size: 20px; ">
                   <option selected>Select Coin</option>
-                  <option value="1">Bitcoin</option>
-                  <option value="2">Ethereum</option>
-                  <option value="3">Litecoin</option>
+                  <option value="USDTBEP2O">USDT BEP2O</option>
+                  <option value="YOHANCOIN">YOHAN COIN</option>
                 </select>
               </div>
             </div>
@@ -66,37 +57,6 @@
           </div>
         </div>
       </div>
-
-<!-- Withdraw Modal -->
-
-<!-- <div class="modal fade" id="depositFundModal" tabindex="-1" aria-labelledby="depositFundModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content p-3 rounded-4" style=" border-radius: 1rem;
-      padding: 1.5rem;">
-        <div class="modal-header border-0 pb-0" style="border-bottom: none;
-        padding-bottom: 0;">
-          <h5 class="modal-title fw-bold" id="depositFundModalLabel fw-bold ">Add Fund</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body text-center">
-          <select class="form-select mb-3" aria-label="Select currency">
-            <option selected>BEP20_USDT</option>
-        </select>
-        <img src="https://via.placeholder.com/150" alt="QR Code" class="qr-code">
-        <p class="address">0xaF725CA07B0F1541C46BaCeD408557B3E5F41E</p>
-        <button class="copy-btn" onclick="navigator.clipboard.writeText('0xaF725CA07B0F1541C46BaCeD408557B3E5F41E')">
-            <i class="bi bi-clipboard"></i>
-        </button>
-        <p class="info-text mt-3">Great! Deposit address generated</p>
-        <p class="info-text">Minimum deposit: $20.00 BEP20_USDT</p>
-        <button type="button" class="btn btn-link text-dark mt-3" data-bs-dismiss="modal">CLOSE</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-
-
 
 
   <div class="modal fade" id="depositFundModal" tabindex="-1" aria-labelledby="depositFundModalLabel" aria-hidden="true">
