--- a/src/app/matching-income/matching-income.component.html
+++ b/src/app/matching-income/matching-income.component.html
@@ -1,37 +1,47 @@
-<div class="mb-3">
-    <label for="teamSelect" class="form-label ">Select Team</label>
-    <select id="teamSelect" class="form-select">
-      <option value=""> Select packages</option>
-      <option value="left">Sliver</option>
-      <option value="right">Gold</option>
-      <option value="tree">Diamond</option>
-    </select>
-  </div>
-  
-   
 
-    <h2 class="fw-bold">Matching Income</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>S.No</th>
-                <th>Date</th>
-                <th>User Id</th>
-                <th>Name</th>
-                <th>Subcription</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>DD</td>
-                <td>0x37e9</td>
-                <td>ss</td>
-                <td>56062311</td>
-                <td>2 minutes ago</td>
-                <td>56062311</td>
+<style>
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        background-color: #f8f9fa;
+    }
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #dee2e6;
+    }
+    th {
+        background-color: #e9ecef;
+    }
+    .transaction {
+        color: #007bff;
+    }
+    .value {
+        color: #007bff;
+        font-weight: bold;
+    }
+</style>
 
-            </tr>
-        
-        </tbody>
-    </table>
+<h2 class="fw-bold">Matching Income</h2>
+<table>
+    <thead>
+        <tr>
+            <th>S.No</th>
+            <th>Date</th>
+            <th>Income</th>
+            <th>Type</th>
+            <th>Remarks</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let items of mdata let i='index' ">
+            <td>{{i+1}}</td>
+            <td>{{items.cdate}}</td>
+            <td>${{items.amount}}</td>
+            <td>{{items.type}}</td>
+            <td>{{items.remark}}</td>
+          
+          </tr>
+    
+    </tbody>
+</table>
