--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,30 +1,40 @@
-<div class="container-fluid" style="background-color: #fff; padding: 20px; border-radius: 15px; margin-bottom: 20px;">
+<div class="container-fluid mt-5" style="background-color: #fff; padding: 20px; border-radius: 15px; margin-bottom: 20px;">
     <div class="row d-flex justify-content-center">
-      <div class="col-lg-6 d-flex">
-        <input type="text" class="form-control date-picker me-2" id="startDate" placeholder="Start Date">
-        <input type="text" class="form-control date-picker" id="endDate" placeholder="End Date">
-      </div>
+     <div class="col-lg-6 d-flex mb-3">
+      <input type="date" class="form-control me-2" [(ngModel)]="startDate" placeholder="Start Date">
+      <input type="date" class="form-control me-2" [(ngModel)]="endDate" placeholder="End Date">
+      <button class="btn btn-primary" (click)="filterByDate()">Filter</button>
+      <button class="btn btn-secondary ms-2" (click)="resetFilter()">Reset</button>
+  </div>
+
     </div>
   
     <table class="table mt-3">
       <thead>
         <tr>
           <th>S.No</th>
-          <th>Remarks</th>
+          <th>Date</th>
           <th>Income</th>
           <th>Type</th>
-          <th>Action</th>
+          <th>Remarks</th>
+
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>dsvd</td>
-          <td>ddd</td>
-          <td>ddd</td>
-          <td>ee</td>
-          <td>af</td>
+        <tr *ngFor="let items of filteredReport; let i='index' ">
+          <td>{{i+1}}</td>
+          <td>{{items.cdate}}</td>
+          <td>${{items.amount}}</td>
+          <td>{{items.type}}</td>
+          <td>{{items.remark}}</td>
+        
         </tr>
       </tbody>
     </table>
   </div>
+
+
+
+
+  
   
