--- a/src/app/tree-view/tree-view.component.scss
+++ b/src/app/tree-view/tree-view.component.scss
@@ -1,54 +1,72 @@
-.node-circle {
-  width: 70px;
-  height: 70px;
-  padding: 8px;
-  border: 2px solid #0d6efd;
-  border-radius: 50%;
-  background-color: white;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
-  transition: transform 0.2s;
-}
-.node-circle:hover {
-  transform: scale(1.1);
-}
-.main-node {
-  width: 80px;
-  height: 80px;
-}
-.small-node {
-  width: 60px;
-  height: 60px;
-}
-
-.tree-line-vertical {
-  width: 2px;
-  height: 20px;
- // background-color: #000;
-  margin: 0 auto;
-}
-.tree-line-horizontal {
-  position: absolute;
-  top: 100px;
-  left: 0;
-  right: 0;
-  height: 2px;
- // background-color: #000;
-  z-index: -1;
-}
-.child-line {
-  top: 25px;
-}
-
-.gap-custom {
-  gap: 6rem;
-}
-
-@media (max-width: 768px) {
-  .overflow-auto {
-    overflow-x: auto !important;
-    white-space: nowrap;
+.responsive-org-chart {
+    overflow-x: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
   }
-  .gap-custom {
-    gap: 3rem;
+  
+  .node-container {
+    display: inline-block;
+    text-align: center;
+    width: auto;
+    padding: 5px;
   }
-}
+  
+  .node-image {
+    width: 2.5rem;
+    height: 2.5rem;
+    // border-radius: 50%;
+    // object-fit: cover;
+    // border: 2px solid #ccc;
+  }
+  
+  .node-name {
+    font-size: 12px;
+    margin-top: 5px;
+    word-wrap: break-word;
+  }
+  
+  .node-title {
+    font-size: 12px;
+    color: #6c757d;
+  }
+  
+  .custom-tooltip {
+    background-color: #333;
+    color: #fff;
+    border-radius: 4px;
+    padding: 5px 10px;
+  }
+  
+  @media (max-width: 768px) {
+    .node-container {
+      width: 80px;
+    }
+    .node-image {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+    .node-name {
+      font-size: 12px;
+    }
+    .node-title {
+      font-size: 10px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .node-container {
+      width: 60px;
+    }
+    .node-image {
+      width: 2rem;
+      height: 2rem;
+    }
+    .node-name {
+      font-size: 10px;
+    }
+    .node-title {
+      font-size: 9px;
+    }
+  }
