--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -118,20 +118,20 @@
   <div class="row" *ngIf="homedata">
     <div class="col-md-12">
       <div class="row mt-5">
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-2">
           <div class="card" style="background-color: #17A2B8; color: white; padding: 20px;">
             <h5> Sponsor Income</h5>
             <h3>${{homedata.sponcerincome}}</h3>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-2">
           <div class="card" style="background-color: #30B32D; color: white; padding: 20px;">
             <h5> Level Binary Income</h5>
 
             <h3>${{homedata.levelbinary}}</h3>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-2">
           <div class="card" style="background-color: #DC3545; color: white ; padding: 20px;">
             <h5> Sliver Income</h5>
             <h3>${{homedata.silverincome}}</h3>
@@ -139,13 +139,13 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-sm-4"> 
+        <div class="col-sm-4 mb-2"> 
           <div class="card" style="background-color: #F2873C; color: white;padding: 20px;">
             <h5> Gold Incoming</h5>
             <h3>${{homedata.goldincome}}</h3>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-2">
           <div class="card" style="background-color: #FF0000; color: white; padding: 20px;">
             <h5> Diamond Incoming</h5>
             <h3>${{homedata.diamondincome}}</h3>
