--- a/src/app/direct-team/direct-team.component.html
+++ b/src/app/direct-team/direct-team.component.html
@@ -10,6 +10,7 @@
       </select>
   </div>
   <h2 class="fw-bold">MY Direct Team</h2>
+  <div class="table-responsive">
   <table class="table">
     <thead>
       <tr>
@@ -43,3 +44,4 @@
     </tbody>
   </table>
   
+  </div>
